crates/solidity-v2/testing/snapshots/diagnostics_output/structure/free_function_with_modifiers/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[SyntaxError 5811] Error: Free functions cannot have modifiers.
    ╭─[input.sol:11:1]
    │
 11 │ function fun() C.someModifier {}
    │ ────────────────┬───────────────  
    │                 ╰───────────────── Error occurred here.
────╯
